# hx711-rpi

./: Cargo.toml
src/: main.rs
