[package]
name = "rust_qt_app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rust_qt_app"
path = "src/main.rs"

[dependencies]
eframe = "0.33"
egui_extras = { version = "0.33.3", features = ["image"] }
anyhow = "1"
embedded-hal = "1"
hx711 = "0.7"
nb = "1"
rppal = { version = "0.22", features = ["hal"] }
